--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <font size="+2"><p align="center-left">is a human being living in dubai. <br>I enjoy talking,laughing,playing,programming and studing</p><font>
 	<font size="+2"><p align="center-left">Outside of school i create websites and game like<br>shooting game</p><font>
 	
-	<a href ="https://faisaltaher.github.io/game/"><img src="images/game.png"></a>
+	<a href ="https://faisaltaher.github.io/game/"><img src="images/game.PNG"></a>
     <p>and much more
 	<br><br>you can contact me at</p>
 	<ul>
