--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	<br><br>you can contact me at</p>
 	<ul>
 	
-	<li class = "themovers"><a href = "youtube.com">💻 Youtube</a></li>
-	<li class = "themovers"><a href = "github.com">👨‍💻 github</a></li>
-	<li class = "themovers"><a href = "facebook">☺️📖 facebook</a></li>
+	<li class = "themovers"><a href = "https://www.youtube.com/channel/UCUCp5sQFUVO6kYqtCrwGtkg">💻 Youtube</a></li>
+	<li class = "themovers"><a href = "https://github.com/faisaltaher">👨‍💻 github</a></li>
+	<li class = "themovers"><a href = "https://www.facebook.com/faisal.taher.14203">☺️📖 facebook</a></li>
 	</ul>
 	<p>so we can be friend</p>
   </div>
