--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 
-    <img src = "images/dog.png"  style="width:170px;height:170px;margin-left:15px;">
+    <img src = "images/dog.png" id ="h" style="width:170px;height:170px;margin-left:15px;">
 
     <b><font size="+2"><h1 align="left" height = 100%>Faisal Taher</h1></font></b>
     <font size="+2"><p align="center-left">is a human being living in dubai. <br>I enjoy talking,laughing,playing,programming and studing</p><font>
