--- a/index.html
+++ b/index.html
@@ -14,24 +14,10 @@
 
 <div class="banner">
 		<div class="typed_wrap">
-			<h1 id= "text">Faisal is <span class="typed"></span></h1>
+			<p id= "text">Hello I am faisal Taher </h1>
 		</div>
 	</div>
 
 </body>
 
 </html>
-<script>$(function(){
-	$(".typed").typed({
-		strings: ["nice.", "perfect.", "a bit funny.","kool.","mortal."],
-		// Optionally use an HTML element to grab strings from (must wrap each string in a <p>)
-	
-		typeSpeed: 100,
-					loop: true,
-					startDelay: 1000,
-					backDelay: 1000
-
-	});
-});
-
-</script>
