--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 			<p id= "text">Hello I am faisal Taher and live in dubai i am a student I enjoy programming, talking, and most importantly i like learning </h1>
 		</div>
 	</div>
+	<div class="typed_wrap">
+			<p id= "text">Fun Fact: 2020 is a leap year which means it has 366 days this is more that a year with 365 days</h1>
+		</div>
 
 </body>
 
