--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 		</div>
 	</div>
 			<p id="fun_fact">Fun Fact: 2020 is a leap year which means it has 366 days this is more that a year with 365 days</p>
-		
-
+th: 125px;
+}
+<div class="trapezoid "></div>
 </body>
 
 </html>
