--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="banner">
 		<div class="typed_wrap">
-			<p id= "text">Hello I am faisal Taher and live in dubai i am a student I enjoy programming, talking, and most importantly i like learning </h1>
+			<p id= "text">Hello I am Faisal Taher and live in Dubai, I am a student I enjoy programming, talking, and most importantly I like learning </h1>
 		</div>
 	</div>
 		
