--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 			<p id= "text">Hello I am Faisal Taher and live in Dubai, I am a student I enjoy programming, talking, and most importantly I like learning </h1>
 		</div>
 	</div>
-		
+	<div id="notebook">
+		<a>Click Me to go to Faisal's notebook</a>
+	</div>
 </html>
