--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 		</div>
 	</div>
 	<div id="notebook">
-		<a>Click Me to go to Faisal's notebook</a>
+		<a href = "Notebook.html">Click Me to go to Faisal's notebook</a>
 	</div>
 </html>
