--- a/Notebook.html
+++ b/Notebook.html
@@ -1,1 +1,25 @@
 
+<html>
+	<head>
+		<title>Faisal's Notebook</title>
+	</head>
+	
+	<body>
+		
+		<h1 align="left"><span style = "color:rgb(11,112,94)" >NO</span><span style = "color:rgb(179, 68, 73)">TEB</span>O<span style = "color:rgb(168,32,118)">OK</span></h1>
+
+		<table >
+			<tbody>
+			
+				<tr>
+					<td>
+						<a href="note732020.html" style="text-decoration:none;">7/3/2020 &nbsp;6: pm</a>
+					</td>
+				</tr>
+				
+			</tbody>
+		</table>
+
+	</body>
+
+</html>
