--- a/Notebook.html
+++ b/Notebook.html
@@ -13,7 +13,7 @@
 			
 				<tr>
 					<td>
-						<a href="note732020.html" style="text-decoration:none;">7/3/2020 &nbsp;6: pm</a>
+						<a href="note742020200.html" style="text-decoration:none;">7/4/2020 &nbsp;2:00 am</a>
 					</td>
 				</tr>
 				
