--- a/Notebook.html
+++ b/Notebook.html
@@ -15,6 +15,10 @@
 					<td>
 						<a href="note742020200.html" style="text-decoration:none;">7/4/2020 &nbsp;2:00 am</a>
 					</td>
+					
+					<td>
+						<a href="note742020201134.html" style="text-decoration:none;">7/4/2020 &nbsp;2:00 am</a>
+					</td>
 				</tr>
 				
 			</tbody>
