--- a/Notebook.html
+++ b/Notebook.html
@@ -17,7 +17,7 @@
 					</td>
 					
 					<td>
-						<a href="note742020201134.html" style="text-decoration:none;">7/4/2020 &nbsp;2:00 am</a>
+						<a href="note742020201134.html" style="text-decoration:none;">7/4/2020 &nbsp;11:34 pm</a>
 					</td>
 				</tr>
 				
