--- a/note7420201134.html
+++ b/note7420201134.html
@@ -1,4 +1,4 @@
 <html>
 <body>Roller skates rolling down in outer space
-<img src="ROLLERSKATESROLLINGDOWNINOUTERSPACE.png/></body>
+<img src="ROLLERSKATESROLLINGDOWNINOUTERSPACE.PNG"></body>
 </html>
