--- a/Notebook.html
+++ b/Notebook.html
@@ -25,7 +25,13 @@
 					<td>
 						<a href="note7420201134.html" style="text-decoration:none;">7/4/2020 &nbsp;11:34 pm</a>
 					</td>
+				</tr>
 				
+				<tr>
+					<td>
+						<a href="note5202021835.html" style="text-decoration:none;">5/20/2021 &nbsp;8:35 am</a>
+					</td>
+				</tr>
 				
 			</tbody>
 		</table>
