--- a/note5202021835.html
+++ b/note5202021835.html
@@ -82,7 +82,7 @@ what does the fox say if its deaf
 <br>
 <span class="catchphrase">BEAT THAT SCIENCE</span> 
 <p><b> <i>
-"i dont fuck with b*tches, i am queer"
+"i dont f*ck with b*tches, i am queer"
 </b> </i>
 best quote ever</p>
 <p>
